Fix checked members line wrapping behavior

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -159,7 +159,7 @@ body.loading #spinner-container {
 
 /* region cards */
 .checked-members {
-    @apply flex flex-col md:flex-row
+    @apply flex flex-col md:flex-row flex-wrap
 }
 
 .checked-member {
